Más estilos e imágenes como íconos

--- a/shapes.html
+++ b/shapes.html
@@ -20,10 +20,10 @@
         <section class="main-ops">
             <div class="card square">
                 <form action="">
-                    <label for="">Escribe cuánto mide cada lado del cuadrado</label>
-                    <input type="number">
-                    <button>Obtener perímetro</button>            
-                    <button>Obtener área</button> 
+                    <label for="squareInput">Escribe cuánto mide cada lado del cuadrado</label>
+                    <input id="squareInput" type="number">
+                    <button type="button">Obtener perímetro</button>            
+                    <button type="button">Obtener área</button> 
                 </form>
             </div>
         </section>
