--- a/shapes.html
+++ b/shapes.html
@@ -38,12 +38,10 @@
                 <form>
                     <span class="icon-ops isoscelesTriangle"></span>
                     <label class="info-ops" for="isoscelesTriangleInput1">Escribe las medidas del triángulo isósceles</label>
-                    <input id="isoscelesTriangleInput1" type="number" placeholder="Medida del primer lado">
+                    <input id="isoscelesTriangleInput1" type="number" placeholder="Medida de los dos lados">
                     <label class="metric" for="isoscelesTriangleInput1">cm</label>
-                    <input id="isoscelesTriangleInput2" type="number" placeholder="Medida del segundo lado">
+                    <input id="isoscelesTriangleInput2" type="number" placeholder="Medida de la base">
                     <label class="metric" for="isoscelesTriangleInput2">cm</label>
-                    <input id="isoscelesTriangleInput3" type="number" placeholder="Medida de la base">
-                    <label class="metric" for="isoscelesTriangleInput3">cm</label>
                     <button type="button" onclick="calculatePerimeterIsoscelesTriangle()">Obtener perímetro</button>            
                     <button type="button" onclick="calculateAreaIsoscelesTriangle()">Obtener área</button> 
                 </form>
