Operaciones estadísticas casi listas

--- a/shapes/shapes.html
+++ b/shapes/shapes.html
@@ -32,6 +32,8 @@
                     <label class="metric" for="tringleInput4">cm</label>
                     <button type="button" onclick="calculatePerimeterTriangle()">Obtener perímetro</button>            
                     <button type="button" onclick="calculateAreaTriangle()">Obtener área</button> 
+                    <p id="resultTriangle"></p>  
+                    <hr class="line"> 
                 </form>
             </div>
             <div class="card">
@@ -44,6 +46,8 @@
                     <label class="metric" for="isoscelesTriangleInput2">cm</label>
                     <button type="button" onclick="calculatePerimeterIsoscelesTriangle()">Obtener perímetro</button>            
                     <button type="button" onclick="calculateAreaIsoscelesTriangle()">Obtener área</button> 
+                    <p id="resultIsoscelesTriangle"></p>  
+                    <hr class="line"> 
                 </form>
             </div>
             <div class="card">
@@ -53,7 +57,9 @@
                     <input id="equilateralTriangleInput" type="number" placeholder="Medida de cada lado">
                     <label class="metric" for="equilateralTriangleInput">cm</label>
                     <button type="button" onclick="calculatePerimeterEquilateralTriangle()">Obtener perímetro</button>            
-                    <button type="button" onclick="calculateAreaEquilateralTriangle()">Obtener área</button> 
+                    <button type="button" onclick="calculateAreaEquilateralTriangle()">Obtener área</button>
+                    <p id="resultEquiateralTriangle"></p>  
+                    <hr class="line">  
                 </form>
             </div>
             <div class="card">
@@ -64,6 +70,8 @@
                     <label class="metric" for="squareInput">cm</label>
                     <button type="button" onclick="calculatePerimeterSquare()">Obtener perímetro</button>            
                     <button type="button" onclick="calculateAreaSquare()">Obtener área</button> 
+                    <p id="resultSquare"></p>  
+                    <hr class="line"> 
                 </form>
             </div>
             <div class="card">
@@ -76,6 +84,8 @@
                     <label class="metric" for="rectangleInput2">cm</label>
                     <button type="button" onclick="calculatePerimeterRectangle()">Obtener perímetro</button>            
                     <button type="button" onclick="calculateAreaRectangle()">Obtener área</button> 
+                    <p id="resultRectangle"></p>  
+                    <hr class="line"> 
                 </form>
             </div>
             <div class="card">
@@ -85,7 +95,9 @@
                     <input id="circleInput" type="number" placeholder="Medida del radio">
                     <label class="metric" for="circleInput">cm</label>
                     <button type="button" onclick="calculatePerimeterCircle()">Obtener perímetro</button>            
-                    <button type="button" onclick="calculateAreaCircle()">Obtener área</button> 
+                    <button type="button" onclick="calculateAreaCircle()">Obtener área</button>
+                    <p id="resultCircle"></p>  
+                    <hr class="line"> 
                 </form>
             </div>
         </section>
