--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -21,7 +21,7 @@
             <div class="card">
                 <form>
                     <label class="info-ops" for="input">Escribe los datos separados por una coma</label>
-                    <input id="input" type="number" placeholder="Ingresa los datos">
+                    <input id="input" type="text" placeholder="Ej: 1, 2, 3, ...">
                     <button type="button" onclick="onClickCalculateMean()">Calcular promedio</button> 
                     <button type="button" onclick="onClickCalculateMedian()">Calcular mediana</button>  
                     <button type="button" onclick="onClickCalculateMode()">Calcular moda</button>  
